:lipstick: fix blog text alignment

--- a/src/components/page/Frontpage/SelectedBlogs/SelectedBlogList.css
+++ b/src/components/page/Frontpage/SelectedBlogs/SelectedBlogList.css
@@ -9,6 +9,7 @@
 
 .SelectedBlogListItem a {
   display: flex;
+  align-items: center;
   gap: var(--space-2);
 
   position: relative;
@@ -23,10 +24,12 @@
 .SelectedBlogListItem h3 {
   flex: 1;
   margin: 0;
-  padding: 0;
   position: relative;
   z-index: 420;
   transition-property: color;
+
+  padding: var(--space-0-75) var(--space-1);
+  padding-right: var(--space-10);
 }
 
 .SelectedBlogListItem {
@@ -50,10 +53,8 @@
   border-width: 1.5px;
   border-style: solid;
   border-radius: var(--space-0-75);
-  padding: var(--space-0-75) var(--space-1);
-  padding-right: var(--space-10);
-  top: calc(-25% + var(--space-0-5));
-  left: calc(-1 * var(--space-1));
+  top: 0;
+  left: 0;
   z-index: 10;
   opacity: 0;
 
